--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
             <h2>Experience</h2>
             <table>
                 <tr>
-                    <th>Class</th>
+                    <th>Classes and Experience</th>
                     <th>Position</th>
                     <th>Duration</th>
                 </tr>
                 <tr>
                     <td>CS 105, 126, 136, 200, 205, 212, 305</td>
                     <td>Informatics Student</td>
-                    <td>PRESENT</td>
+                    <td>2023 - PRESENT</td>
                 </tr>
             </table>
         </section>
@@ -140,18 +140,12 @@
             <h2>Projects</h2>
             <div>
                 <h3>Project Title: Portfolio Website</h3>
-                <p>Developed a personal portfolio website to showcase my projects and skills.</p>
+                <p>Developed a personal portfolio website to showcase my projects and skills for CS212</p>
                 <img src="images/project1-screenshot1.png" alt="Screenshot of the website's homepage">
                 <img src="images/project1-screenshot2.png" alt="Screenshot of the project section">
                 <img src="images/project1-screenshot3.png" alt="Screenshot of the contact form">
             </div>
             <br>
-            <div>
-                <h3>Project Title: E-commerce Backend API</h3>
-                <p>Built a RESTful API for an e-commerce platform using Python and Django.</p>
-                <img src="images/project2-screenshot1.png" alt="Screenshot of the API documentation page">
-                <img src="images/project2-screenshot2.png" alt="Screenshot of a sample API request">
-            </div>
         </section>
 
         <hr>
