--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             border-radius: 8px;
         }
         .contact-info a {
-            color: #007bff;
+            color: #f41100;
             text-decoration: none;
         }
         .contact-info a:hover {
@@ -164,6 +164,7 @@
             <video controls width="100%">
                 <source src="videos/introduction.mp4" type="video/mp4">
                 <source src="videos/introduction.webm" type="video/webm">
+                Your browser does not support the video tag.
             </video>
         </section>
 
@@ -171,4 +172,3 @@
 
 </body>
 </html>
-
