--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-OCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,7 +20,7 @@ OCTYPE html>
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h1, h2, h3 {
-            color: #bcbcbc;
+            color: #004677;
         }
         table {
             width: 100%;
@@ -141,9 +141,9 @@ OCTYPE html>
             <div>
                 <h3>Project Title: Portfolio Website</h3>
                 <p>Developed a personal portfolio website to showcase my projects and skills for CS212</p>
-                <img src="images/project1-screenshot1.png" alt="Screenshot of the website's homepage">
-                <img src="images/project1-screenshot2.png" alt="Screenshot of the project section">
-                <img src="images/project1-screenshot3.png" alt="Screenshot of the contact form">
+                <img src="https://drive.google.com/file/d/19arCeLn0F1PRAUm1BQTzvmMsGsJJVAol/view?usp=sharing" alt="Screenshot of the website's homepage">
+                <img src="https://drive.google.com/file/d/1ot9ZJ4wUDXRj1Cy3Oxcp_8hviOzKyLo8/view?usp=sharing" alt="Screenshot of the project section">
+                <img src="https://drive.google.com/file/d/1HACflzpzW9T09LDfIQpyAxW87JkVES6k/view?usp=sharing" alt="Screenshot of the contact section">
             </div>
             <br>
         </section>
