--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <section class="projects">
             <h2>Projects</h2>
             <div>
-                <h3>Project Title: Portfolio Website</h3>
+                <h3>Portfolio Website</h3>
                 <p>Developed a personal portfolio website to showcase my projects and skills for CS212</p>
                 <img src="https://drive.google.com/file/d/19arCeLn0F1PRAUm1BQTzvmMsGsJJVAol/view?usp=sharing" alt="Screenshot of the website's homepage">
                 <img src="https://drive.google.com/file/d/1ot9ZJ4wUDXRj1Cy3Oxcp_8hviOzKyLo8/view?usp=sharing" alt="Screenshot of the project section">
