--- a/index.html
+++ b/index.html
@@ -162,9 +162,8 @@
             <h2>Introduction Video</h2>
             <p>A short video introducing myself and my professional goals.</p>
             <video controls width="100%">
-                <source src="videos/introduction.mp4" type="video/mp4">
-                <source src="videos/introduction.webm" type="video/webm">
-                Your browser does not support the video tag.
+                <source src="https://www.youtube.com/watch?v=IjEmCxRWBRc" type="video/mp4">
+                <source src="https://www.youtube.com/watch?v=IjEmCxRWBRc" type="video/webm">
             </video>
         </section>
 
