--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <h2>Introduction Video</h2>
             <p>A short video introducing myself and my professional goals.</p>
             <video controls width="100%">
-                <source src="https://drive.google.com/file/d/1PmocCLt9TAYTdZLydQGJiVFQgGYIwRwq/view?usp=sharing" type="video/mp4">
+                <source src="https://drive.google.com/uc?export=download&id=1PmocCLt9TAYTdZLydQGJiVFQgGYIwRwq" type="video/mp4">
             </video>
         </section>
 
