--- a/index.html
+++ b/index.html
@@ -161,9 +161,13 @@
         <section>
             <h2>Introduction Video</h2>
             <p>A short video introducing myself and my professional goals.</p>
-            <video controls width="100%">
-                <source src="https://drive.google.com/uc?export=download&id=1PmocCLt9TAYTdZLydQGJiVFQgGYIwRwq" type="video/mp4">
-            </video>
+            <iframe width="100%" height="480" 
+            src="https://www.youtube.com/embed/IjEmCxRWBRc" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+        </iframe>
         </section>
 
     </div>
