--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
             <div>
                 <h3>Portfolio Website</h3>
                 <p>Developed a personal portfolio website to showcase my projects and skills for CS212</p>
-                <img src="https://drive.google.com/file/d/19arCeLn0F1PRAUm1BQTzvmMsGsJJVAol/view?usp=sharing" alt="Screenshot of the website's homepage">
-                <img src="https://drive.google.com/file/d/1ot9ZJ4wUDXRj1Cy3Oxcp_8hviOzKyLo8/view?usp=sharing" alt="Screenshot of the project section">
-                <img src="https://drive.google.com/file/d/1HACflzpzW9T09LDfIQpyAxW87JkVES6k/view?usp=sharing" alt="Screenshot of the contact section">
+                <img src="https://drive.google.com/uc?export=view&id=19arCeLn0F1PRAUm1BQTzvmMsGsJJVAol" alt="Screenshot of the website's homepage">
+                <img src="https://drive.google.com/uc?export=view&id=1ot9ZJ4wUDXRj1Cy3Oxcp_8hviOzKyLo8" alt="Screenshot of the project section">
+                <img src="https://drive.google.com/uc?export=view&id=1HACflzpzW9T09LDfIQpyAxW87JkVES6k" alt="Screenshot of the contact section">
             </div>
             <br>
         </section>
