--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             <div>
                 <h3>Portfolio Website</h3>
                 <p>Developed a personal portfolio website to showcase my projects and skills for CS212</p>
+                  <img src="projects.jpg" alt="Screenshot of the projects logo">
                   <img src="homepage2.png" alt="Screenshot of the website's homepage">
-                  <img src="hw1projects.png" alt="Screenshot of the project section">
                   <img src="contactpic.png" alt="Screenshot of the contact section">
             </div>
             <br>
